--- a/rf.css
+++ b/rf.css
@@ -1,8 +1,11 @@
-
-body{
+main{
+  padding: 0;
+  margin: 0;
+}
+:root{
     background-color: #FDE992;
     margin: 0;
-  padding: 0;
+    padding: 0;
 }
 ul {
   list-style-type: none;
