--- a/rf.css
+++ b/rf.css
@@ -2,7 +2,7 @@ main{
   padding: 0;
   margin: 0;
 }
-:root{
+body{
     background-color: #FDE992;
     margin: 0;
     padding: 0;
@@ -61,3 +61,8 @@ header{
   height: auto;
   margin:20px;
 }
+
+
+
+
+
