--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -63,3 +63,34 @@ h4{
     background-color: blueviolet;
 
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #d87cc6;
+}
+
+ul li {
+  float: left;
+}
+
+ul li a {
+  display: block;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  background-color: #bf5392;
+}
+.navv{
+    position: sticky;
+}
